@@ -18,7 +18,6 @@ package org.tinymediamanager.core.tvshow.entities;
 import static org.tinymediamanager.core.Constants.*;
 
 import java.io.File;
-import java.io.IOException;
 import java.text.DateFormat;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
@@ -38,13 +37,11 @@ import javax.persistence.ManyToOne;
 import javax.persistence.OneToMany;
 import javax.persistence.Transient;
 
-import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.FilenameUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.tinymediamanager.Globals;
-import org.tinymediamanager.core.Constants;
 import org.tinymediamanager.core.MediaEntityImageFetcherTask;
 import org.tinymediamanager.core.MediaFileType;
 import org.tinymediamanager.core.Utils;
@@ -1074,34 +1071,16 @@ public class TvShowEpisode extends MediaEntity implements Comparable<TvShowEpiso
    * DS\.backup\&lt;moviename&gt;
    */
   public boolean deleteFilesSafely() {
-    String fn = getPath();
-    // inject backup path
-    fn = fn.replace(tvShow.getDataSource(), tvShow.getDataSource() + File.separator + Constants.BACKUP_FOLDER);
+    boolean result = true;
 
-    // create path
-    File backup = new File(fn);
-    if (!backup.exists()) {
-      backup.mkdirs();
-    }
-
-    // backup
-    try {
-      boolean result = true;
-
-      List<MediaFile> mediaFiles = getMediaFiles();
-      for (MediaFile mf : mediaFiles) {
-        // overwrite backup file by deletion prior
-        File newFile = new File(backup, mf.getFilename());
-        FileUtils.deleteQuietly(newFile);
-        result = result && Utils.moveFileSafe(mf.getFile(), newFile);
+    List<MediaFile> mediaFiles = getMediaFiles();
+    for (MediaFile mf : mediaFiles) {
+      if (!mf.deleteSafely(tvShow.getDataSource())) {
+        result = false;
       }
+    }
 
-      return result;
-    }
-    catch (IOException e) {
-      LOGGER.warn("could not delete episode files: " + e.getMessage());
-      return false;
-    }
+    return result;
   }
 
   @Override
